# tam-bangla-server21

./: .gitignore  config.py  database.py  main.py  pyproject.toml  requirements.txt  routes.py
api/: index.py
dtos/: tcc.py
views/: tbpl.py  tcc.py
