[tool.poetry]
name = "tam-bangla-server"
version = "0.1.0"
description = "Server for Tam-Bangla website"
authors = ["Towfiqul Alom <towfiqul.alom@nordcloud.com>"]
readme = "README.md"
packages = [{include = "tam_bangla_server"}]

[tool.poetry.dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
pymongo = "^4.3.3"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
